sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:6: error: reassignment to val
    j=1
     ^AlgBubbleSort3:10: error: reassignment to val
        j=0;
         ^