sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.code
def bubbleSort3() {
  var j: Int=0
  var k: Int = getNombreValeurs()-1
	for (j<-0 to getNombreValeurs()-1) {
    j=1
    for(i<-0 to k-1) {
      if (!plusPetit(i,i+1) ) {
        echange(i,i+1);
        j=0;
      }
      if (j==1) {
        return
      }
    }
    k=k-1;
  } 
 
}
  